# code-examples

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: blog_site_backend.yml  main.yml
backend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
backend/example_backend/: __init__.py  app.py  comments.py  posts.py
backend/example_backend/comments/: controller.py  dao.py
backend/example_backend/exc/: bad_request.py  not_found.py
backend/example_backend/posts/: controller.py  dao.py
backend/migrations/versions/: 02b52ee4dfbc_.py  177e5febe83c_.py
backend/src/: app.py  comments.py  posts.py
backend/tests/: test_posts.py
backend/tests/exc/: test_bad_request.py  test_not_found.py
backend/tests/posts/: test_controller.py  test_dao.py
backend/tests/testdata/: db_helper.py
blog-site/: README.md  docker-compose.yml
blog-site/backend/: Dockerfile  Makefile  README.md  pyproject.toml  start-app.py
blog-site/backend/example_backend/: app.py  extensions.py  settings.py
blog-site/backend/example_backend/comments/: controller.py  dao.py
blog-site/backend/example_backend/exc/: bad_request.py
blog-site/backend/example_backend/posts/: controller.py  dao.py
blog-site/backend/example_backend/users/: controller.py  dao.py  service.py
blog-site/backend/migrations/versions/: 4ca303e304f8_user_settings.py  54bfad871582_add_users.py
blog-site/backend/tests/: base_classes.py  settings.py
blog-site/backend/tests/comments/: test_controller.py  test_dao.py
blog-site/backend/tests/exc/: test_bad_request.py  test_not_found.py
blog-site/backend/tests/posts/: __init__.py  test_controller.py  test_dao.py
blog-site/backend/tests/testdata/: db_helper.py
blog-site/backend/tests/users/: test_controller.py  test_dao.py
blog-site/frontend/: package-lock.json  package.json
blog-site/frontend/public/: index.html
blog-site/frontend/src/: Main.js  index.css  index.js
blog-site/frontend/src/components/: BlogPost.js  BlogPostDelete.js  BlogPostForm.js  BlogPostsList.js  Comment.js  ErrorAlert.js  Footer.js  Header.js  Login.js  Logout.js  Main.js  NavBar.js  NewBlogPost.js  UserSettings.js
blog-site/frontend/src/pages/: About.js  NotFound.js
example/: app.py  comments.py  database.db  example.sqlite3  main.py  migration-01.py  posts.py  schema-01.sql  schema.sql
example/migrations/versions/: 02b52ee4dfbc_.py
example/templates/: base.html  comment.html  edit.html  index.html  post.html
frontend/src/: Main.js  index.css
frontend/src/components/: posts.js
